--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,114 @@ body{
     font-size: 14px;
     font-weight: normal;
 }
-@media only screen and (max-width: 600px) {
-    
-}
+/*@media only screen and (max-width: 600px) {*/
+    [class*="col-"]{
+        float: left;
+        padding: 15px;
+        border-color: transparent;
+        border: 1px solid;
+    }
 
+    col-sm-1{
+        width: 8.33%;
+        }
+        
+    col-sm-2{
+        width: 16.66%;    
+        }
+        
+    col-sm-3{
+        width: 25%;   
+        }
+        
+    col-sm-4{
+        width: 33.33%; 
+        }
+        
+    col-sm-5{
+        width: 41.66%;   
+        }
+        
+    col-sm-6{
+        width: 50%;   
+        }
+        
+    col-sm-7{
+        width: 58.33%;  
+        }
+        
+    col-sm-8{
+        width: 66.66%;   
+        }
+        
+    col-sm-9{
+        width: 75%;  
+        }
+        
+    col-sm-10{
+        width: 83.33%;   
+        }
+        
+    col-sm-11{
+        width: 91.66%;   
+        }
+        
+    col-sm-12{
+        width: 100%;    
+        }
+
+    div.aboutsection{
+       background-color: #000000; 
+    }
+
+    /* Desktop View*/
 @media only screen and (min-width: 768px){
+    col-lg-1{
+        width: 8.33%;
+        }
+        
+    col-lg-2{
+        width: 16.66%;    
+        }
+        
+    col-lg-3{
+        width: 25%;   
+        }
+        
+    col-lg-4{
+        width: 33.33%; 
+        }
+        
+    col-lg-5{
+        width: 41.66%;   
+        }
+        
+    col-lg-6{
+        width: 50%;   
+        }
+        
+    col-lg-7{
+        width: 58.33%;  
+        }
+        
+    col-lg-8{
+        width: 66.66%;   
+        }
+        
+    col-lg-9{
+        width: 75%;  
+        }
+        
+    col-lg-10{
+        width: 83.33%;   
+        }
+        
+    col-lg-11{
+        width: 91.66%;   
+        }
+        
+    col-lg-12{
+        width: 100%;    
+        }
 
 }
