--- a/VIews/index.html
+++ b/VIews/index.html
@@ -5,12 +5,31 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>CoinPool - Homepage</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
-    <script src='../scripts/main.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='../Includes/css/main.css'>
+    <script src='../Includes/scripts/main.js'></script>
 </head>
 <body>
     <header>
         <p>Hello World</p>
+        <h1>The Evolving Defi Crowd Lending Protocol</h1>
     </header>
+    <div class="aboutsection">
+        <div>
+        <img class="aboutimage" src="../Includes/icons/pattern.png">
+        <p>How to start a coinpool<br><span>Jane Doe</span></p>
+        </div>
+        <div>
+            <img class="aboutimage" src="../Includes/icons/pattern.png">
+            <p>How to start a coinpool<br><span>Jane Doe</span></p> 
+        </div>
+        <div>
+            <img class="aboutimage" src="../Includes/icons/pattern.png">
+            <p>How to start a coinpool<br><span>Jane Doe</span></p>
+        </div>
+        <div>
+            <img class="aboutimage" src="../Includes/icons/pattern.png">
+            <p>How to start a coinpool<br><span>Jane Doe</span></p> 
+        </div>
+    </div>
 </body>
 </html>
