update changes in main.css and index file

--- a/Includes/css/main.css
+++ b/Includes/css/main.css
@@ -11,6 +11,7 @@ body{
     font-family: poppins;
     font-size: 14px;
     font-weight: normal;
+    box-sizing: border-box;
 }
 h1{
     font-size: 21.33px;
@@ -19,7 +20,7 @@ h1{
 btn.getstarted{
     background-color: #F936B4;
 }
-div.aboutsection{
+div.aboutwrapper{
     background-color: #000000;
     border: #ffffff27 1px solid;
     float: left;
@@ -28,22 +29,48 @@ div.aboutsection{
     grid-template-rows: auto auto;
     align-content: center;
 }
-div.aboutsection > div > img.aboutimage{
-    width: absolute;
-    height: 82%;
-    display: inline;
+[class *="aboutcontent"]{
+    background-color: #ffffff;
 }
-div.aboutsection > div > p{
+img.aboutimage{
+    background-color: #000000;
+}
+p.aboutcontent{
+    color: #000000;
     font-family: Arial;
     font-size: 9px;
-    font-weight: bold;
-    background-color: #ffffff;
-    color: #7F7F7F;
-    padding-top: 10px;
-    position: bottom fixed;
-    margin: 0px;
+    margin-left: 20px;
 }
-div.aboutsection >div> p > span{
+span.aboutcontent{
+    color: #7F7F7F;
+    font: Arial 9px lighter;
+}
+div.aboutcontent1{
+    float: left;
+    display: grid;
+    grid-column: 1/ span 1;
+    grid-row: 1/ span 1;
+}
+div.aboutcontent2{
+    float: left;
+    display: grid;
+    grid-column: 2/ span 1;
+    grid-row: 1/ span 1;
+}
+div.aboutcontent3{
+    float: left;
+    display: grid;
+    grid-column: 1/ span 1;
+    grid-row: 2/ span 1;
+}
+div.aboutcontent4{
+    float: left;
+    display: grid;
+    grid-column: 2/ span1;
+    grid-row: 2/ span 1;
+}
+
+div.aboutwrapper >div> p > span{
     color: #CCCCCC;
     font-weight: lighter;
 }
@@ -51,65 +78,67 @@ div.about-item1{
     grid-area: about-item;
     grid-template-areas: 'about-item about-item' 'about-item about-item';
 }
-/*@media only screen and (max-width: 600px) {*/
-    [class*="col-"]{
-        float: left;
-        padding: 15px;
-        border-color: transparent;
-        border: 1px solid;
+[class*="col-"]{
+    float: left;
+    padding: 15px;
+    border-color: transparent;
+    border: 1px solid;
+}
+
+row::after{
+    content: ""; clear: both; display: table;
+}
+col-sm-1{
+    width: 8.33%;
+    }
+        
+col-sm-2{
+    width: 16.66%;    
+    }
+        
+col-sm-3{
+    width: 25%;   
+    }
+        
+col-sm-4{
+    width: 33.33%; 
+    }
+        
+col-sm-5{
+    width: 41.66%;   
+    }
+    
+col-sm-6{
+    width: 50%;   
+    }
+        
+col-sm-7{
+    width: 58.33%;  
+    }
+        
+col-sm-8{
+    width: 66.66%;   
+    }
+        
+col-sm-9{
+    width: 75%;  
+    }
+        
+col-sm-10{
+    width: 83.33%;   
+    }
+        
+col-sm-11{
+    width: 91.66%;   
+    }
+        
+col-sm-12{
+    width: 100%;    
     }
 
-    col-sm-1{
-        width: 8.33%;
-        }
-        
-    col-sm-2{
-        width: 16.66%;    
-        }
-        
-    col-sm-3{
-        width: 25%;   
-        }
-        
-    col-sm-4{
-        width: 33.33%; 
-        }
-        
-    col-sm-5{
-        width: 41.66%;   
-        }
-        
-    col-sm-6{
-        width: 50%;   
-        }
-        
-    col-sm-7{
-        width: 58.33%;  
-        }
-        
-    col-sm-8{
-        width: 66.66%;   
-        }
-        
-    col-sm-9{
-        width: 75%;  
-        }
-        
-    col-sm-10{
-        width: 83.33%;   
-        }
-        
-    col-sm-11{
-        width: 91.66%;   
-        }
-        
-    col-sm-12{
-        width: 100%;    
-        }
-
-    div.aboutsection{
-       background-color: #000000; 
-    }
+div.aboutwrapper{
+    background-color: #000000; 
+}
 
     /* Desktop View*/
 @media only screen and (min-width: 768px){
