--- a/VIews/index.html
+++ b/VIews/index.html
@@ -13,23 +13,25 @@
         <p>Hello World</p>
         <h1>The Evolving Defi Crowd Lending Protocol</h1>
     </header>
-    <div class="aboutsection">
-        <div>
+    <!--About features section-->
+    <div class="aboutwrapper">
+        <div class="aboutcontent1">
         <img class="aboutimage" src="../Includes/icons/pattern.png">
-        <p>How to start a coinpool<br><span>Jane Doe</span></p>
+        <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">Jane Doe</span></p>
         </div>
-        <div>
+        <div class="aboutcontent2">
             <img class="aboutimage" src="../Includes/icons/pattern.png">
-            <p>How to start a coinpool<br><span>Jane Doe</span></p> 
+            <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">John Doe</span></p> 
         </div>
-        <div>
+        <div class="aboutcontent3">
             <img class="aboutimage" src="../Includes/icons/pattern.png">
-            <p>How to start a coinpool<br><span>Jane Doe</span></p>
+        <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">Jane Doe</span></p>
         </div>
-        <div>
+        <div class="aboutcontent4">
             <img class="aboutimage" src="../Includes/icons/pattern.png">
-            <p>How to start a coinpool<br><span>Jane Doe</span></p> 
+        <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">John Doe</span></p>
         </div>
     </div>
+    <!--About features section ends-->
 </body>
 </html>
