update footer style in main.css

--- a/VIews/index.html
+++ b/VIews/index.html
@@ -9,10 +9,12 @@
     <script src='../Includes/scripts/main.js'></script>
 </head>
 <body>
+    <!--Header section starts-->
     <header>
         <p>Hello World</p>
         <h1>The Evolving Defi Crowd Lending Protocol</h1>
     </header>
+    <!--Header section ends-->
     <!--About features section-->
     <div class="aboutwrapper">
         <div class="aboutcontent1">
@@ -21,17 +23,20 @@
         </div>
         <div class="aboutcontent2">
             <img class="aboutimage" src="../Includes/icons/pattern.png">
-            <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">John Doe</span></p> 
+            <p class="aboutcontent">How to join a coinpool<br><span class="aboutcontent">John Doe</span></p> 
         </div>
         <div class="aboutcontent3">
             <img class="aboutimage" src="../Includes/icons/pattern.png">
-        <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">Jane Doe</span></p>
+        <p class="aboutcontent">How to earn cToken<br><span class="aboutcontent">Jane Doe</span></p>
         </div>
         <div class="aboutcontent4">
             <img class="aboutimage" src="../Includes/icons/pattern.png">
-        <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">John Doe</span></p>
+        <p class="aboutcontent">How to use cToken<br><span class="aboutcontent">John Doe</span></p>
         </div>
     </div>
     <!--About features section ends-->
+    <footer>
+
+    </footer>
 </body>
 </html>
