--- a/Includes/css/main.css
+++ b/Includes/css/main.css
@@ -20,6 +20,10 @@ h1{
 btn.getstarted{
     background-color: #F936B4;
 }
+
+
+
+
 div.aboutwrapper{
     background-color: #000000;
     border: #ffffff27 1px solid;
@@ -29,40 +33,48 @@ div.aboutwrapper{
     grid-template-rows: auto auto;
     align-content: center;
 }
+
 [class *="aboutcontent"]{
     background-color: #ffffff;
 }
+
 img.aboutimage{
     background-color: #000000;
 }
+
 p.aboutcontent{
     color: #000000;
     font-family: Arial;
     font-size: 9px;
     margin-left: 20px;
 }
+
 span.aboutcontent{
     color: #7F7F7F;
     font: Arial 9px lighter;
 }
+
 div.aboutcontent1{
     float: left;
     display: grid;
     grid-column: 1/ span 1;
     grid-row: 1/ span 1;
 }
+
 div.aboutcontent2{
     float: left;
     display: grid;
     grid-column: 2/ span 1;
     grid-row: 1/ span 1;
 }
+
 div.aboutcontent3{
     float: left;
     display: grid;
     grid-column: 1/ span 1;
     grid-row: 2/ span 1;
 }
+
 div.aboutcontent4{
     float: left;
     display: grid;
@@ -70,14 +82,51 @@ div.aboutcontent4{
     grid-row: 2/ span 1;
 }
 
+div.aboutwrapper{
+    background-color: #000000; 
+}
+
 div.aboutwrapper >div> p > span{
     color: #CCCCCC;
     font-weight: lighter;
 }
+
 div.about-item1{
     grid-area: about-item;
     grid-template-areas: 'about-item about-item' 'about-item about-item';
 }
+
+footer{
+    display: grid;
+    float: left;
+    background-color: #ffffff;
+}
+
+footer > div.footersection{
+    grid-column: auto auto auto auto auto;
+    grid-row: 1/ span 1;
+}
+
+.footerhome{
+
+}
+
+.footertf{
+
+}
+
+.footerpool{
+
+}
+
+.footerchart{
+
+}
+
+.footerset{
+
+}
+
 [class*="col-"]{
     float: left;
     padding: 15px;
@@ -88,6 +137,7 @@ div.about-item1{
 row::after{
     content: ""; clear: both; display: table;
 }
+
 col-sm-1{
     width: 8.33%;
     }
@@ -136,9 +186,7 @@ col-sm-12{
     width: 100%;    
     }
 
-div.aboutwrapper{
-    background-color: #000000; 
-}
+
 
     /* Desktop View*/
 @media only screen and (min-width: 768px){
