update footer style in main.css

--- a/VIews/index.html
+++ b/VIews/index.html
@@ -36,7 +36,9 @@
     </div>
     <!--About features section ends-->
     <footer>
-
+        <div class="footersection">
+            
+        </div>
     </footer>
 </body>
 </html>
