--- a/Includes/css/main.css
+++ b/Includes/css/main.css
@@ -105,26 +105,27 @@ footer{
 footer > div.footersection{
     grid-column: auto auto auto auto auto;
     grid-row: 1/ span 1;
+    grid-template-areas: 'home tf pool chart set';
 }
 
 .footerhome{
-
+    grid-area: home;
 }
 
 .footertf{
-
+    grid-area: tf;
 }
 
 .footerpool{
-
+    grid-area: pool;
 }
 
 .footerchart{
-
+    grid-area: chart;
 }
 
 .footerset{
-
+    grid-area: set;
 }
 
 [class*="col-"]{
