--- a/VIews/index.html
+++ b/VIews/index.html
@@ -35,10 +35,16 @@
         </div>
     </div>
     <!--About features section ends-->
+    <!--Footer section-->
     <footer>
-        <div class="footersection">
-            
+        <div class="footer">
+        <img src="../Includes/icons/home.png" alt="" class="">
+        <img src="../Includes/icons/tf.png" alt="" class="">
+        <img src="../Includes/icons/pool.png" alt="" class=""> 
+        <img src="../Includes/icons/chart.png" alt="" class="">
+        <img src="../Includes/icons/set.png" alt="" class="">
         </div>
     </footer>
+    <!--Foooter section ends-->
 </body>
 </html>
