make change to design

--- a/VIews/index.html
+++ b/VIews/index.html
@@ -1,50 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>CoinPool - Homepage</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../Includes/css/main.css'>
-    <script src='../Includes/scripts/main.js'></script>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Homepage</title>
+<link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-    <!--Header section starts-->
-    <header>
-        <p>Hello World</p>
-        <h1>The Evolving Defi Crowd Lending Protocol</h1>
-    </header>
-    <!--Header section ends-->
-    <!--About features section-->
-    <div class="aboutwrapper">
-        <div class="aboutcontent1">
-        <img class="aboutimage" src="../Includes/icons/pattern.png">
-        <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">Jane Doe</span></p>
-        </div>
-        <div class="aboutcontent2">
-            <img class="aboutimage" src="../Includes/icons/pattern.png">
-            <p class="aboutcontent">How to join a coinpool<br><span class="aboutcontent">John Doe</span></p> 
-        </div>
-        <div class="aboutcontent3">
-            <img class="aboutimage" src="../Includes/icons/pattern.png">
-        <p class="aboutcontent">How to earn cToken<br><span class="aboutcontent">Jane Doe</span></p>
-        </div>
-        <div class="aboutcontent4">
-            <img class="aboutimage" src="../Includes/icons/pattern.png">
-        <p class="aboutcontent">How to use cToken<br><span class="aboutcontent">John Doe</span></p>
-        </div>
-    </div>
-    <!--About features section ends-->
-    <!--Footer section-->
-    <footer>
-        <div class="footer">
-        <img src="../Includes/icons/home.png" alt="" class="">
-        <img src="../Includes/icons/tf.png" alt="" class="">
-        <img src="../Includes/icons/pool.png" alt="" class=""> 
-        <img src="../Includes/icons/chart.png" alt="" class="">
-        <img src="../Includes/icons/set.png" alt="" class="">
-        </div>
-    </footer>
-    <!--Foooter section ends-->
+
+<body class="bg-main" style="padding-top: 70px background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
+
+<nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+      <li class="nav-item"> <a class="nav-link" href="#">About&nbsp; &nbsp; &nbsp;</a> </li>
+    </ul>
+</div>
+</nav><br><br>
+<div class="jumbotron">
+  <h1 class="display-4">Hello, world!</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead"> <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> </p>
+</div>	
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/popper.min.js"></script>
+<script src="../js/bootstrap-4.3.1.js"></script>
 </body>
 </html>
