--- a/VIews/index.html
+++ b/VIews/index.html
@@ -9,23 +9,97 @@
 </head>
 
 <body class="bg-main" style="padding-top: 70px background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
-
+	<!--Navigation Bar Starts-->
 <nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent1">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-      <li class="nav-item"> <a class="nav-link" href="#">About&nbsp; &nbsp; &nbsp;</a> </li>
+      <li class="nav-item"> <a class="nav-link" href="about.html">About&nbsp; &nbsp; &nbsp;</a> </li>
     </ul>
 </div>
-</nav><br><br>
-<div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead"> <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> </p>
-</div>	
+</nav>&nbsp;
+<!--navigation bar ends-->
+<!--Get Strated Starts-->
+<div class="jumbotron bg-main">
+<p class="lead"> <a class="btn btn-main btn-lg" href="joinpool.html" role="button">Get Started <img src="../Includes/icons/arrow.png" alt="arrow"></a><img src="../Includes/icons/pattern.png" class="float-right img-fluid" width="200px" height="200px"> </p>
+<h2>The Evolving <br> Defi Crowd Lending <br>Protocol on BSC </h2>
+</div>
+	<!-- Get Started Ends-->
+	<!-- Browse Pool Starts-->
+<div class="container">
+	<h6 class="mb-0">Browse <span>Pools</span> <img src="../Includes/icons/arrow.png" alt="arrow"></h6><br>
+  <div class="row mt-0">
+	  
+    <div class="col-4 col-sm-4 col-lg-12">
+<div class="card text-center col-md-4 col-lg-12 bg-dark">
+  <img src="../Includes/icons/shape.png" class="float-left mt-2" width="30" height="24">
+  <div class="card-body">
+          <h5 class="card-title">Pool Amount</h5>
+</div>
+        <div class="card-footer text-muted"> Users </div>
+    </div>
+    </div>
+    <div class="col-4 col-sm-4 col-lg-12">
+      <div class="card text-center col-md-4 col-lg-12 bg-dark">
+		  <img src="../Includes/icons/shape.png" class="float-left mt-2" width="30" height="24">
+        <div class="card-body">
+          <h5 class="card-title">Pool Amount</h5>
+</div>
+        <div class="card-footer text-muted"> Users </div>
+      </div>
+    </div>
+    <div class="col-4 col-sm-4 col-lg-12">
+      <div class="card text-center col-md-4 col-lg-12 bg-dark">
+		  <img src="../Includes/icons/shape.png" class="float-left mt-2" width="30" height="24">
+        <div class="card-body">
+          <h5 class="card-title">Pool Amount</h5>
+</div>
+        <div class="card-footer text-muted"> Users </div>
+      </div>
+    &nbsp;</div>
+  </div>
+</div>
+	<!--Browsee Pools Ends-->
+	<!--About Section Starts-->
+    <div class="container">
+      <div class="row">
+        <div class="col-6 col-sm-6 col-lg-12">
+          <div class="card col-md-6 col-sm-6 col-lg-12"> 
+		    <img class="card-img-top img-fluid" src="../images/card-img.png" alt="Card image cap">
+            <div class="card-body">
+            <p class="card-title text-dark">How to start a pool</p>
+            <p class="card-text text-black-50">Jane Doe</p></div>
+          </div>
+        </div>
+		  
+        <div class="col-6 col-sm-6 col-lg-12">
+			<div class="card col-md-6 col-sm-6 col-lg-12"> 
+		    <img class="card-img-top img-fluid" src="../images/card-img.png" alt="Card image cap">
+            <div class="card-body">
+            <p class="card-title text-dark">How to join a pool</p>
+            <p class="card-text text-black-50">John Doe</p></div>
+          </div>
+	    </div>
+        <div class="col-sm-6 col-lg-12 col-6">
+			<div class="card col-md-6 col-sm-6 col-lg-12"> 
+		    <img class="card-img-top img-fluid" src="../images/card-img.png" alt="Card image cap">
+            <div class="card-body">
+            <p class="card-title text-dark">How to earn cToken</p>
+            <p class="card-text text-black-50">Jane Doe</p></div>
+          </div>
+		  </div>
+        <div class="col-6 col-sm-6 col-lg-12">
+		  <div class="card col-md-6 col-sm-6 col-lg-12"> 
+		    <img class="card-img-top img-fluid" src="../images/card-img.png" alt="Card image cap">
+            <div class="card-body">
+            <p class="card-title text-dark">How to use cToken</p>
+            <p class="card-text text-black-50">John Doe</p></div>
+          </div>
+		  </div>
+      </div>
+    </div>
+<!--About Section Ends-->
 <script src="../js/jquery-3.3.1.min.js"></script>
 <script src="../js/popper.min.js"></script>
 <script src="../js/bootstrap-4.3.1.js"></script>
