--- a/css/bootstrap-4.3.1.css
+++ b/css/bootstrap-4.3.1.css
@@ -2423,6 +2423,12 @@ fieldset:disabled a.btn {
   pointer-events: none;
 }
 
+.btn-main{
+	background-color: #F936B4;
+	border-collapse: #F936B4;
+	color: #fff;
+}
+
 .btn-primary {
   color: #fff;
   background-color: #007bff;
@@ -2454,7 +2460,8 @@ fieldset:disabled a.btn {
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+    box-shadow: inset 0 0 0 0.2rem #F936B4;
+    -webkit-box-shadow: inset 0 0 0 0.2rem #F936B4;
 }
 
 .btn-secondary {
