update homepage and css

--- a/VIews/index.html
+++ b/VIews/index.html
@@ -6,9 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Homepage</title>
 <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
+<link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
 </head>
 
-<body class="bg-main" style="padding-top: 70px background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
+<body class="bg-main" style="padding-top: 70px; background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
 	<!--Navigation Bar Starts-->
 <nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -61,45 +62,27 @@
   </div>
 </div>
 	<!--Browsee Pools Ends-->
-	<!--About Section Starts-->
-    <div class="container">
-      <div class="row">
-        <div class="col-6 col-sm-6 col-lg-12">
-          <div class="card col-md-6 col-sm-6 col-lg-12"> 
-		    <img class="card-img-top img-fluid" src="../images/card-img.png" alt="Card image cap">
-            <div class="card-body">
-            <p class="card-title text-dark">How to start a pool</p>
-            <p class="card-text text-black-50">Jane Doe</p></div>
-          </div>
-        </div>
-		  
-        <div class="col-6 col-sm-6 col-lg-12">
-			<div class="card col-md-6 col-sm-6 col-lg-12"> 
-		    <img class="card-img-top img-fluid" src="../images/card-img.png" alt="Card image cap">
-            <div class="card-body">
-            <p class="card-title text-dark">How to join a pool</p>
-            <p class="card-text text-black-50">John Doe</p></div>
-          </div>
-	    </div>
-        <div class="col-sm-6 col-lg-12 col-6">
-			<div class="card col-md-6 col-sm-6 col-lg-12"> 
-		    <img class="card-img-top img-fluid" src="../images/card-img.png" alt="Card image cap">
-            <div class="card-body">
-            <p class="card-title text-dark">How to earn cToken</p>
-            <p class="card-text text-black-50">Jane Doe</p></div>
-          </div>
-		  </div>
-        <div class="col-6 col-sm-6 col-lg-12">
-		  <div class="card col-md-6 col-sm-6 col-lg-12"> 
-		    <img class="card-img-top img-fluid" src="../images/card-img.png" alt="Card image cap">
-            <div class="card-body">
-            <p class="card-title text-dark">How to use cToken</p>
-            <p class="card-text text-black-50">John Doe</p></div>
-          </div>
-		  </div>
-      </div>
-    </div>
-<!--About Section Ends-->
+
+<!--About features section-->
+<div class="aboutwrapper">
+  <div class="aboutcontent1">
+  <img class="aboutimage" src="../Includes/icons/pattern.png">
+  <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">Jane Doe</span></p>
+  </div>
+  <div class="aboutcontent2">
+      <img class="aboutimage" src="../Includes/icons/pattern.png">
+      <p class="aboutcontent">How to join a coinpool<br><span class="aboutcontent">John Doe</span></p> 
+  </div>
+  <div class="aboutcontent3">
+      <img class="aboutimage" src="../Includes/icons/pattern.png">
+  <p class="aboutcontent">How to earn cToken<br><span class="aboutcontent">Jane Doe</span></p>
+  </div>
+  <div class="aboutcontent4">
+      <img class="aboutimage" src="../Includes/icons/pattern.png">
+  <p class="aboutcontent">How to use cToken<br><span class="aboutcontent">John Doe</span></p>
+  </div>
+</div>
+<!--About features section ends-->
 <script src="../js/jquery-3.3.1.min.js"></script>
 <script src="../js/popper.min.js"></script>
 <script src="../js/bootstrap-4.3.1.js"></script>
