--- a/VIews/index.html
+++ b/VIews/index.html
@@ -9,7 +9,7 @@
 <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
 </head>
 
-<body class="bg-main" style="padding-top: 70px; background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
+<body class="bg-main" style="box-sizing: border-box; padding-top: 70px; background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
 	<!--Navigation Bar Starts-->
 <nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
