--- a/css/bootstrap-4.3.1.css
+++ b/css/bootstrap-4.3.1.css
@@ -10056,5 +10056,4 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
-/*# sourceMappingURL=bootstrap.css.map */.bg-m {
-}
+/*# sourceMappingURL=bootstrap.css.map */
