update index.html and market.html

--- a/VIews/index.html
+++ b/VIews/index.html
@@ -9,7 +9,7 @@
 <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
 </head>
 
-<body class="bg-main" style="box-sizing: border-box; padding-top: 70px; background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
+<body class="bg-main" style="box-sizing: border-box; padding-top: 50px; background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
 	<!--Navigation Bar Starts-->
 <nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -83,6 +83,19 @@
   </div>
 </div>
 <!--About features section ends-->
+
+<!--Footer section starts-->
+<footer>
+  <div class="footer fixed-bottom">
+  <a href="#"><img src="../Includes/icons/home.png" alt="home" class=""></a>
+  <a href="transfer.html"><img src="../Includes/icons/tf.png" alt="transfer" class=""></a>
+  <a href="pool.html"><img src="../Includes/icons/pool.png" alt="pool" class=""></a>
+  <a href="market.html"><img src="../Includes/icons/chart.png" alt="market" class=""></a>
+  <a href="setting.html"><img src="../Includes/icons/set.png" alt="settings" class=""></a>
+  </div>
+</footer>
+<!--Foooter section ends-->
+
 <script src="../js/jquery-3.3.1.min.js"></script>
 <script src="../js/popper.min.js"></script>
 <script src="../js/bootstrap-4.3.1.js"></script>
