update index.html desktop view

--- a/VIews/index.html
+++ b/VIews/index.html
@@ -24,7 +24,7 @@
 <!--Get Strated Starts-->
 <div class="jumbotron bg-main">
 <p class="lead"> <a class="btn btn-main btn-lg" href="joinpool.html" role="button">Get Started <img src="../Includes/icons/arrow.png" alt="arrow"></a><img src="../Includes/icons/pattern.png" class="float-right img-fluid" width="200px" height="200px"> </p>
-<h2>The Evolving <br> Defi Crowd Lending <br>Protocol on BSC </h2>
+<h2 style="color: #ffffff; font-family: poppins; font-size: 21.33px;">The Evolving <br> Defi Crowd Lending <br>Protocol on BSC </h2>
 </div>
 	<!-- Get Started Ends-->
 	<!-- Browse Pool Starts-->
@@ -36,27 +36,27 @@
 <div class="card text-center col-md-4 col-lg-12 bg-dark">
   <img src="../Includes/icons/shape.png" class="float-left mt-2" width="30" height="24">
   <div class="card-body">
-          <h5 class="card-title">Pool Amount</h5>
+          <h5 class="card-title">Pool: Amount</h5>
 </div>
-        <div class="card-footer text-muted"> Users </div>
+        <div class="card-footer text-muted"><img src="../Includes/icons/person.svg" alt="user"> 7/10  </div>
     </div>
     </div>
     <div class="col-4 col-sm-4 col-lg-12">
       <div class="card text-center col-md-4 col-lg-12 bg-dark">
 		  <img src="../Includes/icons/shape.png" class="float-left mt-2" width="30" height="24">
         <div class="card-body">
-          <h5 class="card-title">Pool Amount</h5>
+          <h5 class="card-title">Pool: Amount</h5>
 </div>
-        <div class="card-footer text-muted"> Users </div>
+        <div class="card-footer text-muted"> <img src="../Includes/icons/person.svg" alt="user"> 7/10  </div>
       </div>
     </div>
     <div class="col-4 col-sm-4 col-lg-12">
       <div class="card text-center col-md-4 col-lg-12 bg-dark">
 		  <img src="../Includes/icons/shape.png" class="float-left mt-2" width="30" height="24">
         <div class="card-body">
-          <h5 class="card-title">Pool Amount</h5>
+          <h5 class="card-title">Pool: Amount</h5>
 </div>
-        <div class="card-footer text-muted"> Users </div>
+        <div class="card-footer text-muted"><img src="../Includes/icons/person.svg" alt="user"> 7/10 </div>
       </div>
     &nbsp;</div>
   </div>
@@ -64,23 +64,25 @@
 	<!--Browsee Pools Ends-->
 
 <!--About features section-->
-<div class="aboutwrapper">
+<div class="container">
+<div class="aboutwrapper col-sm-12 col-lg-12">
   <div class="aboutcontent1">
-  <img class="aboutimage" src="../Includes/icons/pattern.png">
+  <img class="aboutimage" src="../Includes/icons/pool.png">
   <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">Jane Doe</span></p>
   </div>
   <div class="aboutcontent2">
-      <img class="aboutimage" src="../Includes/icons/pattern.png">
+      <img class="aboutimage" src="../Includes/icons/pool.png">
       <p class="aboutcontent">How to join a coinpool<br><span class="aboutcontent">John Doe</span></p> 
   </div>
   <div class="aboutcontent3">
-      <img class="aboutimage" src="../Includes/icons/pattern.png">
+      <img class="aboutimage" src="../Includes/icons/pool.png">
   <p class="aboutcontent">How to earn cToken<br><span class="aboutcontent">Jane Doe</span></p>
   </div>
   <div class="aboutcontent4">
-      <img class="aboutimage" src="../Includes/icons/pattern.png">
+      <img class="aboutimage" src="../Includes/icons/pool.png">
   <p class="aboutcontent">How to use cToken<br><span class="aboutcontent">John Doe</span></p>
   </div>
+</div>
 </div>
 <!--About features section ends-->
 
