--- a/VIews/index.html
+++ b/VIews/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Homepage</title>
 <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
-<link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
+<link rel="stylesheet" type="text/css" media="screen" href="../css/main.css">
 </head>
 
 <body class="bg-main" style="box-sizing: border-box; padding-top: 50px; background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
@@ -32,7 +32,7 @@
 	<h6 class="mb-0">Browse <span>Pools</span> <img src="../Includes/icons/arrow.png" alt="arrow"></h6><br>
   <div class="row mt-0">
 	  
-    <div class="col-4 col-sm-4 col-lg-12">
+    <div class="col-4 col-xs-12 col-sm-4 col-md-4 col-lg-12">
 <div class="card text-center col-md-4 col-lg-12 bg-dark">
   <img src="../Includes/icons/shape.png" class="float-left mt-2" width="30" height="24">
   <div class="card-body">
@@ -41,7 +41,7 @@
         <div class="card-footer text-muted"><img src="../Includes/icons/person.svg" alt="user"> 7/10  </div>
     </div>
     </div>
-    <div class="col-4 col-sm-4 col-lg-12">
+    <div class="col-4 col-xs-12 col-sm-4 col-md-4 col-lg-12">
       <div class="card text-center col-md-4 col-lg-12 bg-dark">
 		  <img src="../Includes/icons/shape.png" class="float-left mt-2" width="30" height="24">
         <div class="card-body">
@@ -50,7 +50,7 @@
         <div class="card-footer text-muted"> <img src="../Includes/icons/person.svg" alt="user"> 7/10  </div>
       </div>
     </div>
-    <div class="col-4 col-sm-4 col-lg-12">
+    <div class="col-4 col-xs-12 col-sm-4 col-md-4 col-lg-12">
       <div class="card text-center col-md-4 col-lg-12 bg-dark">
 		  <img src="../Includes/icons/shape.png" class="float-left mt-2" width="30" height="24">
         <div class="card-body">
@@ -65,20 +65,20 @@
 
 <!--About features section-->
 <div class="container">
-<div class="aboutwrapper col-sm-12 col-lg-12">
-  <div class="aboutcontent1">
+<div class="aboutwrapper col-md-12 col-lg-12">
+  <div class="aboutcontent1 col-sm-6 col-md-6 col-lg-6">
   <img class="aboutimage" src="../Includes/icons/pool.png">
   <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">Jane Doe</span></p>
   </div>
-  <div class="aboutcontent2">
+  <div class="aboutcontent2 col-sm-6 col-md-6 col-lg-6">
       <img class="aboutimage" src="../Includes/icons/pool.png">
       <p class="aboutcontent">How to join a coinpool<br><span class="aboutcontent">John Doe</span></p> 
   </div>
-  <div class="aboutcontent3">
+  <div class="aboutcontent3 col-sm-6 col-md-6 col-lg-6">
       <img class="aboutimage" src="../Includes/icons/pool.png">
   <p class="aboutcontent">How to earn cToken<br><span class="aboutcontent">Jane Doe</span></p>
   </div>
-  <div class="aboutcontent4">
+  <div class="aboutcontent4 col-sm-6 col-md-6 col-lg-6">
       <img class="aboutimage" src="../Includes/icons/pool.png">
   <p class="aboutcontent">How to use cToken<br><span class="aboutcontent">John Doe</span></p>
   </div>
@@ -88,9 +88,9 @@
 
 <!--Footer section starts-->
 <footer>
-  <div class="footer fixed-bottom">
-  <a href="#"><img src="../Includes/icons/home.png" alt="home" class=""></a>
-  <a href="transfer.html"><img src="../Includes/icons/tf.png" alt="transfer" class=""></a>
+  <div class="footer">
+  <a href="JavaScript:void(0)"><img src="../Includes/icons/home.png" alt="home" class=""></a>
+  <a href="vault.html"><img src="../Includes/icons/tf.png" alt="transfer" class=""></a>
   <a href="pool.html"><img src="../Includes/icons/pool.png" alt="pool" class=""></a>
   <a href="market.html"><img src="../Includes/icons/chart.png" alt="market" class=""></a>
   <a href="setting.html"><img src="../Includes/icons/set.png" alt="settings" class=""></a>
