--- a/VIews/market.html
+++ b/VIews/market.html
@@ -11,8 +11,17 @@
 <body>
     <!---Header section starts-->
     <header>
-        <h1>Hello, Welcome to CoinPool Parket Page </h1>
-        <p>The Evolving Defi Crowd Lending Protocol</p>
+       	<!--Navigation Bar Starts-->
+<nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item active"> <a class="nav-link" href="index.html">Home</a> </li>
+      <li class="nav-item"> <a class="nav-link" href="about.html">About&nbsp; &nbsp; &nbsp;</a> </li>
+    </ul>
+</div>
+</nav>&nbsp;
+<!--navigation bar ends-->
     </header>
     <!---Header section ends here-->
     <div id="background">
@@ -117,9 +126,9 @@
 <footer>
     <div class="footer fixed-bottom">
     <a href="index.html"><img src="../Includes/icons/home.png" alt="home" class=""></a>
-    <a href="transfer.html"><img src="../Includes/icons/tf.png" alt="transfer" class=""></a>
+    <a href="vault.html"><img src="../Includes/icons/tf.png" alt="transfer" class=""></a>
     <a href="pool.html"><img src="../Includes/icons/pool.png" alt="pool" class=""></a>
-    <a href="#"><img src="../Includes/icons/chart.png" alt="market" class=""></a>
+    <a href="JavaScript:void(0)"><img src="../Includes/icons/chart.png" alt="market" class=""></a>
     <a href="setting.html"><img src="../Includes/icons/set.png" alt="settings" class=""></a>
     </div>
   </footer>
