--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@ div.aboutwrapper{
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    align-content: center;
 
 }
 
@@ -35,6 +34,8 @@ div.aboutwrapper{
 
 img.aboutimage{
     background-color: #000000;
+    width: 200px;
+
 }
 
 p.aboutcontent{
