--- a/VIews/index.html
+++ b/VIews/index.html
@@ -15,21 +15,21 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent1">
     <ul class="navbar-nav mx-auto">
-      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+      <li class="nav-item active"> <a class="nav-link" href="JavaScript:void(0)">Home <span class="sr-only">(current)</span></a> </li>
       <li class="nav-item"> <a class="nav-link" href="about.html">About&nbsp; &nbsp; &nbsp;</a> </li>
     </ul>
 </div>
 </nav>&nbsp;
 <!--navigation bar ends-->
 <!--Get Strated Starts-->
-<div class="jumbotron bg-main">
-<p class="lead"> <a class="btn btn-main btn-lg" href="joinpool.html" role="button">Get Started <img src="../Includes/icons/arrow.png" alt="arrow"></a><img src="../Includes/icons/pattern.png" class="float-right img-fluid" width="200px" height="200px"> </p>
+<div class="jumbotron bg-main col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12 mx-auto">
+<p class="lead"> <a class="btn btn-main btn-lg" href="pool.html" role="button">Get Started <img src="../Includes/icons/arrow.png" alt="arrow"></a><img src="../Includes/icons/pattern.png" class="float-right img-fluid" width="200px" height="200px"> </p>
 <h2 style="color: #ffffff; font-family: poppins; font-size: 21.33px;">The Evolving <br> Defi Crowd Lending <br>Protocol on BSC </h2>
 </div>
 	<!-- Get Started Ends-->
 	<!-- Browse Pool Starts-->
-<div class="container">
-	<h6 class="mb-0">Browse <span>Pools</span> <img src="../Includes/icons/arrow.png" alt="arrow"></h6><br>
+<div class="container col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
+	<a href="pool.html"><h6 class="mb-0 text-light">Browse <span>Pools</span> <img src="../Includes/icons/arrow.png" alt="arrow"></h6></a><br>
   <div class="row mt-0">
 	  
     <div class="col-4 col-xs-12 col-sm-4 col-md-4 col-lg-12">
@@ -64,36 +64,41 @@
 	<!--Browsee Pools Ends-->
 
 <!--About features section-->
-<div class="container">
-<div class="aboutwrapper col-md-12 col-lg-12">
-  <div class="aboutcontent1 col-sm-6 col-md-6 col-lg-6">
-  <img class="aboutimage" src="../Includes/icons/pool.png">
-  <p class="aboutcontent">How to start a coinpool<br><span class="aboutcontent">Jane Doe</span></p>
+
+<div class="container col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12 mb-5 mx-auto">
+
+  <div class="row justify-content-center">
+	  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6"><a href="about.html#startpool" title="How to start a pool"><img src="../Includes/icons/pool.png" class="img-fluid" alt="Placeholder image"></a>
+	    <div class="row bg-light text-dark">
+	      <div class="col-lg-12 col-md-12 col-sm-6 col-12 ml-4 font-weight-bold col-xl-11"><a href="about.html#startpool" class="text-dark"><p>How to start a pool <br><span>BSC AMC Team</span></p></a></div>
+        </div>
+	  </div>
+	  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6"><a href="about.html#joinpool" title="How to join a pool"><img src="../Includes/icons/pool.png" class="img-fluid" alt="Placeholder image"></a>
+	    <div class="row bg-light text-dark">
+	      <div class="col-lg-12 col-md-12 col-sm-6 col-12 ml-4 font-weight-bold col-xl-11 offset-xl-0"><a href="about.html#joinpool" class="text-dark"><p>How to join a pool <br><span>BSC AMC Team</span></p></a></div>
+        </div>
+	  </div>
+	  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6"><a href="about.html#earntoken" title="How to earn cToken"><img src="../Includes/icons/pool.png" class="img-fluid" alt="Placeholder image"></a>
+	    <div class="row bg-light text-dark">
+	      <div class="col-lg-12 col-md-12 col-sm-6 col-12 ml-4 font-weight-bold col-xl-11"><a href="about.html#earntoken" class="text-dark"><p>How to earn cToken <br><span>BSC AMC Team</span></p></a></div>
+        </div>
+	  </div>
+	  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6"><a href="about.html#usetoken" title="How to use cToken"><img src="../Includes/icons/pool.png" class="img-fluid" alt="Placeholder image"></a>
+	    <div class="row bg-light text-dark">
+	      <div class="col-lg-12 col-md-12 col-sm-6 col-12 ml-4 font-weight-bold col-xl-11"><a href="about.html#usetoken" class="text-dark"><p>How to use cToken <br><span>BSC AMC Team</span></p></a></div>
+      </div></div>
   </div>
-  <div class="aboutcontent2 col-sm-6 col-md-6 col-lg-6">
-      <img class="aboutimage" src="../Includes/icons/pool.png">
-      <p class="aboutcontent">How to join a coinpool<br><span class="aboutcontent">John Doe</span></p> 
-  </div>
-  <div class="aboutcontent3 col-sm-6 col-md-6 col-lg-6">
-      <img class="aboutimage" src="../Includes/icons/pool.png">
-  <p class="aboutcontent">How to earn cToken<br><span class="aboutcontent">Jane Doe</span></p>
-  </div>
-  <div class="aboutcontent4 col-sm-6 col-md-6 col-lg-6">
-      <img class="aboutimage" src="../Includes/icons/pool.png">
-  <p class="aboutcontent">How to use cToken<br><span class="aboutcontent">John Doe</span></p>
-  </div>
-</div>
 </div>
 <!--About features section ends-->
 
 <!--Footer section starts-->
 <footer>
-  <div class="footer">
+  <div class="footer fixed-bottom">
   <a href="JavaScript:void(0)"><img src="../Includes/icons/home.png" alt="home" class=""></a>
   <a href="vault.html"><img src="../Includes/icons/tf.png" alt="transfer" class=""></a>
   <a href="pool.html"><img src="../Includes/icons/pool.png" alt="pool" class=""></a>
   <a href="market.html"><img src="../Includes/icons/chart.png" alt="market" class=""></a>
-  <a href="setting.html"><img src="../Includes/icons/set.png" alt="settings" class=""></a>
+  <a href="JavaScript:void(0)"><img src="../Includes/icons/set.png" alt="settings" class=""></a>
   </div>
 </footer>
 <!--Foooter section ends-->
