--- a/VIews/pool.html
+++ b/VIews/pool.html
@@ -57,7 +57,7 @@
   <a href="vault.html"><img src="../Includes/icons/tf.png" alt="transfer" class=""></a>
   <a href="JavaScript:void(0)"><img src="../Includes/icons/pool.png" alt="pool" class=""></a>
   <a href="market.html"><img src="../Includes/icons/chart.png" alt="market" class=""></a>
-  <a href="setting.html"><img src="../Includes/icons/set.png" alt="settings" class=""></a>
+  <a href="JavaScript:void(0)"><img src="../Includes/icons/set.png" alt="settings" class=""></a>
   </div>
 </footer>
 <!--Foooter section ends-->
