--- a/VIews/vault.html
+++ b/VIews/vault.html
@@ -59,7 +59,7 @@
 		</div>	
 	</div>
 
-<div class="container-fluid mt-4 col-lg-6">
+<div class="container-fluid mt-4 col-lg-6 mb-5">
 	<div class="row col-12 col-md-12 col-sm-12 col-lg-12 mx-auto bg-light text-dark p-2 rounded text-left">
 		<div class="col-sm-12 col-xl-12 col-md-12 col-12">&nbsp;&nbsp;<img src="../Includes/icons/cToken.png" alt="busd" width="70"> cT :  </div>
 		</div>	
@@ -73,7 +73,7 @@
   <a href="JavaScript:void(0)"><img src="../Includes/icons/tf.png" alt="transfer" class=""></a>
   <a href="pool.html"><img src="../Includes/icons/pool.png" alt="pool" class=""></a>
   <a href="market.html"><img src="../Includes/icons/chart.png" alt="market" class=""></a>
-  <a href="setting.html"><img src="../Includes/icons/set.png" alt="settings" class=""></a>
+  <a href="JavaScript:void(0)"><img src="../Includes/icons/set.png" alt="settings" class=""></a>
   </div>
 </footer>
 <!--Foooter section ends-->
