--- a/VIews/pool.html
+++ b/VIews/pool.html
@@ -38,9 +38,17 @@
 	<!--Create Pool and Join Pool Buttons Ends-->
 	
 	<!--Active Pools Section Starts-->
+	<div class="container col-12 col-sm-12 col-md-12 col-lg-9 col-xl-9 mt-4 p-2 bg-light rou">
 	
+	  <div class="row text-dark font-weight-bold text-left ml-2 align-content-center">
+	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">ACTIVE POOL DETAILS <img src="../Includes//icons/pool.png" width="20" alt="pool"></div>
+	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 text-left">POOL ID:  <br>ASSET: </div>
+	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 text-left">POOL ID:  <br>ASSET: </div>
+	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 text-left">POOL ID:  <br>ASSET: </div>
+      </div>
+	</div>
 	
-	<!--Active Pools Section Ends-->
+<!--Active Pools Section Ends-->
 	
 	
 <!--Open Pools Section Starts-->
