--- a/VIews/pool.html
+++ b/VIews/pool.html
@@ -38,7 +38,7 @@
 	<!--Create Pool and Join Pool Buttons Ends-->
 	
 	<!--Active Pools Section Starts-->
-	<div class="container col-12 col-sm-12 col-md-12 col-lg-9 col-xl-9 mt-4 p-2 bg-light rou">
+	<div class="container col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8 mt-4 p-2 bg-light rou">
 	
 	  <div class="row text-dark font-weight-bold text-left ml-2 align-content-center">
 	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">ACTIVE POOL DETAILS <img src="../Includes//icons/pool.png" width="20" alt="pool"></div>
@@ -52,8 +52,13 @@
 	
 	
 <!--Open Pools Section Starts-->
-<div class="container">
-	
+<div class="container col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8 mt-4 mb-5">
+  <ul class="list-group text-dark font-weight-bold" style="font-family: poppins;">
+    <li class="list-group-item">List of Active (Open) Pools  </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center"> List Group item 1 with badge
+      <button type="button" class="btn-warning btn-sm">Join</button>
+    </li>
+  </ul>
 </div>
 <!--Open Pools Section Ends-->
 	
