--- a/VIews/pool.html
+++ b/VIews/pool.html
@@ -13,10 +13,10 @@
 
 <body style="color: #ffffff; font-family: poppins; font-weight: normal;">
 	<!--Navigation Bar Starts-->
-<nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
+<nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark col-xl-8 col-lg-8 mx-auto"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-    <ul class="navbar-nav mx-auto">
+  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent1">
+    <ul class="navbar-nav">
       <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a> </li>
       <li class="nav-item"> <a class="nav-link" href="about.html">About&nbsp; &nbsp; &nbsp;</a> </li>
     </ul>
